--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       property="og:description"
       content="Personal portfolio"
     />
-    <meta property="og:image" href="banner.png" />
+    <meta property="og:image" content="https://drive.google.com/file/d/19UTQV90ppy6RJvLx9b4XYoIC8ixtOb_1/view?usp=sharing" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="M Saif | Game Developer" />
@@ -41,7 +41,7 @@
       name="twitter:description"
       content="Personal portfolio"
     />
-    <meta name="twitter:image" href="banner.png" />
+    <meta name="twitter:image" content="https://drive.google.com/file/d/19UTQV90ppy6RJvLx9b4XYoIC8ixtOb_1/view?usp=sharing" /> />
 
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
     <meta name="robots" content="max-image-preview:large" />
