--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       name="description"
       content="Personal portfolio"
     />
-    <!-- <meta
+    <meta
       name="framer-search-index"
       content="https://framerusercontent.com/sites/7miPveM5XHDG06R6z30pEg/searchIndex-QcR1sXjvEm6N.json"
-    /> -->
+    />
     <link
       href="fevicon.svg"
       rel="icon"
@@ -45,8 +45,8 @@
 
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
     <meta name="robots" content="max-image-preview:large" />
-    <!-- <link rel="canonical" href="https://soulful-success-402426.framer.app/" />
-    <meta property="og:url" content="https://soulful-success-402426.framer.app/" /> -->
+    <link rel="canonical" href="https://soulful-success-402426.framer.app/" />
+    <meta property="og:url" content="https://soulful-success-402426.framer.app/" />
     <style data-framer-breakpoint-css>
       @media(min-width: 1200px){.hidden-72rtr7{display:none!important}}@media(min-width: 810px) and (max-width: 1199px){.hidden-14wxtjj{display:none!important}}@media(max-width: 809px){.hidden-10pol70{display:none!important}}
     </style>
